objects/NGCC_Lead_Status__c.object
<CustomObject>
    <fields>
        <fullName>NGCC_Approved__c</fullName>
        <label>NGCC Approved</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGCC_Cancel__c</fullName>
        <label>NGCC Cancel</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGCC_Rejected__c</fullName>
        <label>NGCC Rejected</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGCC_Send_to_Sales__c</fullName>
        <label>NGCC Send to Sales</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NGCC Lead Status</label>
</CustomObject>